haveuonrecord